fixed alignment of nav items in fullscreen view

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 #portfolio-link, #portfolio-toggler{
     text-decoration: none;
     color: var(--bs-nav-link-color);
+    padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
+    display: inline-block;
 }
 
 #profile {
